--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,3 +1,11 @@
+private:
+  start: |
+    Привет, <b>${login}</b>!
+    Добавь меня в группу.
 cmd:
   test: 
     "name: ${userLogin}"
+banan:
+  show: ${login} показал(а) 🍌
+  suc:  ${login} получает 🍌\n<b>Срок:</b> ${duration}
+  error: <b>У меня не получилось выдать 🍌</b>\n<pre>${err}</pre>
