--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -8,4 +8,7 @@ cmd:
 banan:
   show: ${login} показал(а) 🍌
   suc:  ${login} получает 🍌\n<b>Срок:</b> ${duration}
-  error: <b>У меня не получилось выдать 🍌</b>\n<pre>${err}</pre>
+  pick: ${login} лишается 🍌\n
+  error: 
+    take: <b>У меня не получилось выдать 🍌</b>\n<pre>${err}</pre>
+    pick: <b>У меня не получилось забарть 🍌</b>\n<pre>${err}</pre>
