--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -10,5 +10,8 @@ banan:
   suc:  ${login} получает 🍌\n<b>Срок:</b> ${duration}
   pick: ${login} лишается 🍌\n
   error: 
-    take: <b>У меня не получилось выдать 🍌</b>\n<pre>${err}</pre>
-    pick: <b>У меня не получилось забарть 🍌</b>\n<pre>${err}</pre>
+    take: <b>У меня не получилось выдать 🍌</b>\n<pre>${error}</pre>
+    pick: <b>У меня не получилось забарть 🍌</b>\n<pre>${error}</pre>
+kick:
+  suc: ${login} получает пинок
+  error: <b>У меня не получилось пнуть</b>\n<pre>${error}</pre>
