--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -12,4 +12,4 @@ banan:
   error: <b>У меня не получилось выдать 🍌</b>\n<pre>${error}</pre>
 kick:
   suc: ${login} получает пинок
-  error: <b>У меня не получилось пнуть</b>\n<pre>${error}</pre>
+  who: Кого пнуть?😡
