--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -14,4 +14,7 @@ kick:
   suc: ${login} получает пинок
   who: Кого пнуть?😡
 welcome:
-  test: Привет, ${from.first_name}!
+  text: Привет, ${from.first_name}!
+  gif:
+    push: Gif успешно добавлен в список приветствий
+    pull: Gif успешно удален из списка приветствий
