--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -14,6 +14,7 @@ kick:
   suc: ${login} получает пинок
   who: Кого пнуть?😡
 welcome:
+  reset: Приветствия были сброшены
   text: Привет, ${from.first_name}!
   gif:
     push: Gif успешно добавлен в список приветствий
