--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -2,12 +2,14 @@ private:
   start: |
     Привет, <b>${login}</b>!
     Добавь меня в группу.
+
+    /help - помощь
+
+    👨🏻‍💻 Блог разработчика: @LyBlog
 cmd:
   help: |
     <b>Список команд бота:</b>
     /banan - выдать бан
-  test: 
-    "name: ${userLogin}"
 banan:
   show: ${login} показал(а) 🍌
   suc:  ${login} получает 🍌\n<b>Срок:</b> ${duration}
