--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -10,6 +10,7 @@ cmd:
   help: |
     <b>Список команд бота:</b>
     /banan - выдать бан
+  reset: Настройки были сброшены
 banan:
   show: ${login} показал(а) 🍌
   suc:  ${login} получает 🍌\n<b>Срок:</b> ${duration}
@@ -19,7 +20,6 @@ kick:
   suc: ${login} получает пинок
   who: Кого пнуть?😡
 welcome:
-  reset: Приветствия были сброшены
   text: Привет, ${from.first_name}!
   gif:
     push: Gif успешно добавлен в список приветствий
