--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,15 +1,23 @@
 private:
   start: |
     Привет, <b>${login}</b>!
+    Я помогу тебе администировать группу.
     Добавь меня в группу.
 
     /help - помощь
 
-    👨🏻‍💻 Блог разработчика: @LyBlog
+    <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
 cmd:
   help: |
-    <b>Список команд бота:</b>
+    Я помогаю администрировать группы.
+
+    <b>Список команд:</b>
     /banan - выдать бан
+    /kick - пнуть
+
+    !reset - сбросить настройки группы
+
+    <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
   reset: Настройки были сброшены
 banan:
   show: ${login} показал(а) 🍌
