--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -14,10 +14,19 @@ cmd:
     <b>Список команд:</b>
     /banan - выдать бан
     /kick - пнуть
+    /del - удалить сообщение
 
-    !reset - сбросить настройки группы
+    <code>!gif</code> - добавить/удалить гиф в список приветствий
+    <code>!text</code> - добавить/удалить текст в список приветствий
+    <code>!reset</code> - сбросить настройки группы
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
+  gif:
+    push: Gif успешно добавлен в список приветствий
+    pull: Gif успешно удален из списка приветствий
+  text:
+    push: Текст успешно добавлен в список приветствий
+    pull: Текст успешно удален из списка приветствий
   reset: Настройки были сброшены
 banan:
   show: ${login} показал(а) 🍌
@@ -29,6 +38,3 @@ kick:
   who: Кого пнуть?😡
 welcome:
   text: Привет, ${from.first_name}!
-  gif:
-    push: Gif успешно добавлен в список приветствий
-    pull: Gif успешно удален из списка приветствий
