--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -7,6 +7,7 @@ private:
     /help - помощь
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
+  btn_add: Добавить в группу
 cmd:
   help: |
     Я помогаю администрировать группы.
