--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -28,6 +28,7 @@ cmd:
   text:
     push: Текст успешно добавлен в список приветствий
     pull: Текст успешно удален из списка приветствий
+    error: Ошибка, текст не содержит <code>%login%</code>
   reset: Настройки были сброшены
 banan:
   show: ${login} показал(а) 🍌
