--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,7 +1,7 @@
 private:
   start: |
     Привет, <b>${login}</b>!
-    Я помогу тебе администировать группу.
+    Я помогу тебе администрировать группу.
     Добавь меня в группу.
 
     /help - помощь
