--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -22,6 +22,7 @@ cmd:
     <code>!reset</code> - сбросить настройки группы
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
+    <b>GitHub:</b> https://github.com/LyoSU/LyAdminBot-js
   gif:
     push: Gif успешно добавлен в список приветствий
     pull: Gif успешно удален из списка приветствий
