error hendl fix

--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -39,5 +39,8 @@ banan:
 kick:
   suc: ${login} получает пинок
   who: Кого пнуть?😡
+  error: <b>У меня не получилось пнуть</b>\n<pre>${error}</pre>
+del:
+  error: <b>У меня не получилось удалить сообщение</b>\n<pre>${error}</pre>
 welcome:
   text: Привет, ${from.first_name}!
