--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -23,6 +23,7 @@ cmd:
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
     <b>GitHub:</b> https://github.com/LyoSU/LyAdminBot-js
+  ping: Pong ${ms} ms
   gif:
     push: Gif успешно добавлен в список приветствий
     pull: Gif успешно удален из списка приветствий
