--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -24,9 +24,10 @@ cmd:
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
     <b>GitHub:</b> https://github.com/LyoSU/LyAdminBot-js
   ping: |
-    Pong
-    Ответ сервера: ${sms} мс
-    Ответ telegram: ${tms} мс
+    🏓 Pong
+    <b>Ответ сервера:</b> ${sms} мс
+    <b>Ответ telegram:</b> ${tms} мс
+    <b>Бот работает:</b> ${workTime}
   gif:
     push: Gif успешно добавлен в список приветствий
     pull: Gif успешно удален из списка приветствий
