--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -16,6 +16,7 @@ cmd:
     /banan - выдать бан
     /kick - пнуть
     /del - удалить сообщение
+    /ping - проверить работу бота
 
     <code>!gif</code> - добавить/удалить гиф в список приветствий
     <code>!text</code> - добавить/удалить текст в список приветствий
