--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,6 +1,6 @@
 private:
   start: |
-    Привет, <b>${login}</b>!
+    Привет, <b>${name}</b>!
     Я помогу тебе администрировать группу.
     Добавь меня в группу.
 
@@ -35,18 +35,16 @@ cmd:
   text:
     push: Текст успешно добавлен в список приветствий
     pull: Текст успешно удален из списка приветствий
-    error: Ошибка, текст не содержит <code>%login%</code>
+    error: Ошибка, текст не содержит <code>%name%</code>
   reset: Настройки были сброшены
 banan:
-  show: ${login} показал(а) 🍌
-  suc:  ${login} получает 🍌\n<b>Срок:</b> ${duration}
-  pick: ${login} лишается 🍌\n
+  show: ${name} показал(а) 🍌
+  suc:  ${name} получает 🍌\n<b>Срок:</b> ${duration}
+  pick: ${name} лишается 🍌\n
   error: <b>У меня не получилось выдать 🍌</b>\n<pre>${error}</pre>
 kick:
-  suc: ${login} получает пинок
+  suc: ${name} получает пинок
   who: Кого пнуть?😡
   error: <b>У меня не получилось пнуть</b>\n<pre>${error}</pre>
 del:
   error: <b>У меня не получилось удалить сообщение</b>\n<pre>${error}</pre>
-welcome:
-  text: Привет, ${from.first_name}!
