--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -23,12 +23,17 @@ cmd:
     <code>!reset</code> - сбросить настройки группы
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
-    <b>GitHub:</b> https://github.com/LyoSU/LyAdminBot-js
-  ping: |
-    🏓 Pong
-    <b>Ответ сервера:</b> ${sms} мс
-    <b>Ответ telegram:</b> ${tms} мс
-    <b>Бот работает:</b> ${workTime}
+    <b>GitHub:</b> github.com/LyoSU/LyAdminBot
+  ping:
+      pong: |
+        🏓 Pong
+        <b>Ответ сервера:</b> ${sms} мс
+        <b>Ответ telegram:</b> ${tms} мс
+        <b>Бот работает:</b> ${workTime}
+
+        ${delay}
+      delay: |
+        ❗️ <b>Бот не работал:</b> ${delayTime}
   gif:
     push: Gif успешно добавлен в список приветствий
     pull: Gif успешно удален из списка приветствий
