--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -41,6 +41,15 @@ cmd:
     push: Текст успешно добавлен в список приветствий
     pull: Текст успешно удален из списка приветствий
     error: Ошибка, текст не содержит <code>%name%</code>
+  extra:
+    push: \#${extraName} успешно сохранено
+    update: \#${extraName} успешно обновлено
+    pull: \#${extraName} успешно удалено
+    error:
+      not_found: |
+        <b>Ошибка!</b>
+        extra c именем \#${extraName} не найдено.
+        Для создания новой введите команду повторно в ответ на сообщение.
   reset: Настройки были сброшены
 banan:
   show: ${name} показал(а) 🍌
