--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -18,8 +18,11 @@ cmd:
     /del - удалить сообщение
     /ping - проверить работу бота
 
+    <code>!welcome</code> - включить/отключить приветствия
     <code>!gif</code> - добавить/удалить гиф в список приветствий
     <code>!text</code> - добавить/удалить текст в список приветствий
+    <code>!extra arg</code> - создать extra с названием \#arg
+
     <code>!reset</code> - сбросить настройки группы
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
