goup update fix and more

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -1,3 +1,69 @@
 private:
   start: |
-    Hey, , <b>${name}</b>!
+    Привет, <b>${name}</b>!
+    Я помогу тебе администрировать группу.
+    Добавь меня в группу.
+
+    /help - помощь
+
+    <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
+  btn_add: Добавить в группу
+cmd:
+  help: |
+    Я помогаю администрировать группы.
+
+    <b>Список команд:</b>
+    /banan - выдать бан
+    /kick - пнуть
+    /del - удалить сообщение
+    /ping - проверить работу бота
+
+    <code>!welcome</code> - включить/отключить приветствия
+    <code>!gif</code> - добавить/удалить гиф в список приветствий
+    <code>!text</code> - добавить/удалить текст в список приветствий
+    <code>!extra arg</code> - создать extra с названием \#arg
+
+    <code>!reset</code> - сбросить настройки группы
+
+    <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
+    <b>GitHub:</b> github.com/LyoSU/LyAdminBot
+  ping:
+      pong: |
+        🏓 Pong
+        <b>Ответ сервера:</b> ${sms} мс
+        <b>Ответ telegram:</b> ${tms} мс
+        <b>Бот работает:</b> ${workTime}
+
+        ${delay}
+      delay: |
+        ❗️ <b>Бот не работал:</b> ${delayTime}
+  welcome:
+    disable: Приветствия выключены
+    enable: Приветствия включены
+  gif:
+    push: Gif успешно добавлен в список приветствий
+    pull: Gif успешно удален из списка приветствий
+  text:
+    push: Текст успешно добавлен в список приветствий
+    pull: Текст успешно удален из списка приветствий
+    error: Ошибка, текст не содержит <code>%name%</code>
+  extra:
+    push: \#${extraName} успешно сохранено
+    pull: \#${extraName} успешно удалено
+    error:
+      not_found: |
+        <b>Ошибка!</b>
+        extra c именем \#${extraName} не найдено.
+        Для создания новой введите команду повторно в ответ на сообщение.
+  reset: Настройки были сброшены
+banan:
+  show: ${name} показал(а) 🍌
+  suc:  ${name} получает 🍌\n<b>Срок:</b> ${duration}
+  pick: ${name} лишается 🍌\n
+  error: <b>У меня не получилось выдать 🍌</b>\n<pre>${error}</pre>
+kick:
+  suc: ${name} получает пинок
+  who: Кого пнуть?😡
+  error: <b>У меня не получилось пнуть</b>\n<pre>${error}</pre>
+del:
+  error: <b>У меня не получилось удалить сообщение</b>\n<pre>${error}</pre>
