--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -34,7 +34,7 @@ cmd:
       <b>Количество бананов:</b> ${banCount} 🍌
       <b>Общее время бана:</b> ${banTime}
 
-      <b>Впервые был замечен:</b> ${firstAct}
+      <b>Впервые был замечен:</b> ${createdAt}
   ping:
       pong: |
         🏓 Pong
