--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -39,8 +39,10 @@ cmd:
     list: |
       <b>extra's чата:</b>
       ${extras}
-    error: |
-      Нет
+    error:
+      not_found: |
+        У этой группы нет extra.
+        Для создания администратор должен написать <code>!extra</code>
   ping:
       pong: |
         🏓 Pong
