--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -23,6 +23,7 @@ cmd:
     <code>!text</code> - добавить/удалить текст в список приветствий
     <code>!extra arg</code> - создать extra с названием \#arg
 
+    <code>!json</code> - отправить настройки
     <code>!reset</code> - сбросить настройки группы
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
