--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -29,6 +29,7 @@ cmd:
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
     <b>GitHub:</b> github.com/LyoSU/LyAdminBot
   my_stats:
+    send_pm: Статистика отправлена в ЛС
     chat: |
       📊 Статистика ${name} в чате <b>${chatName}</b>:
 
