--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -29,7 +29,7 @@ cmd:
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
     <b>GitHub:</b> github.com/LyoSU/LyAdminBot
 
-    version: ${version}
+    <pre>v${version}</pre>
   my_stats:
     send_pm: Статистика отправлена в ЛС
     chat: |
