--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -75,6 +75,12 @@ cmd:
         <b>Ошибка!</b>
         extra c именем \#${extraName} не найдено.
         Для создания новой введите команду повторно в ответ на сообщение.
+  top_banan:
+    info: |
+      Топ 🍌 в чате <b>${chatName}</b>:
+      ${top}
+    error:
+      empty: В этой группе пока никто не получал 🍌
   reset: Настройки были сброшены
 banan:
   show: ${name} показал(а) 🍌
