--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -63,10 +63,12 @@ cmd:
   gif:
     push: Gif успешно добавлен в список приветствий
     pull: Gif успешно удален из списка приветствий
+    reset: Список gif очищен
   text:
     push: Текст успешно добавлен в список приветствий
     pull: Текст успешно удален из списка приветствий
     error: Ошибка, текст не содержит <code>%name%</code>
+    reset: Список тектов очищен
   extra:
     push: \#${extraName} успешно сохранено
     pull: \#${extraName} успешно удалено
