--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -24,6 +24,9 @@ cmd:
     <code>!extra arg</code> - создать extra с названием \#arg
 
     <code>!json</code> - отправить настройки
+
+    <code>!reset-text</code> - сбросить все таексты приветствий
+    <code>!reset-gif</code> - сбросить все gif приветствий
     <code>!reset</code> - сбросить настройки группы
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
