--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -87,6 +87,9 @@ cmd:
     error:
       empty: В этой группе пока никто не получал 🍌
   reset: Настройки были сброшены
+settings:
+    json:
+      reset: Настройки были успешно восстановлены из файла
 banan:
   show: ${name} показал(а) 🍌
   suc:  ${name} получает 🍌\n<b>Срок:</b> ${duration}
