--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -17,6 +17,8 @@ cmd:
     /kick - пнуть
     /del - удалить сообщение
     /ping - проверить работу бота
+    /mystats - статистика в чате
+    /extras - список extra чата
 
     <code>!welcome</code> - включить/отключить приветствия
     <code>!gif</code> - добавить/удалить гиф в список приветствий
