--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -19,6 +19,7 @@ cmd:
     /ping - проверить работу бота
     /mystats - статистика в чате
     /extras - список extra чата
+    /top_banan - топ человек по времени банана
 
     <code>!welcome</code> - включить/отключить приветствия
     <code>!gif</code> - добавить/удалить гиф в список приветствий
