--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -44,6 +44,8 @@ cmd:
       <b>Количество бананов:</b> ${banCount} 🍌
       <b>Общее время бана:</b> ${banTime}
 
+      <b>Флуд:</b> ${flood}%
+
       <b>Впервые был замечен:</b> ${createdAt}
   extras:
     list: |
