--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -45,6 +45,7 @@ cmd:
       <b>Общее время бана:</b> ${banTime}
 
       <b>Сообщений:</b> ${messages}
+      <b>Актив:</b> ${active}%
       <b>Флуд:</b> ${flood}%
 
       <b>Впервые был замечен:</b> ${createdAt}
