--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -43,6 +43,7 @@ cmd:
 
       <b>Количество бананов:</b> ${banCount} 🍌
       <b>Общее время бана:</b> ${banTime}
+      <b>Автобан:</b> ${banAutoTime}
 
       <b>Сообщений:</b> ${messages}
       <b>Актив:</b> ${active}%
