--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -50,6 +50,20 @@ cmd:
       <b>Флуд:</b> ${flood}%
 
       <b>Впервые был замечен:</b> ${createdAt}
+    error:
+      blocked: |
+        <b>Ошибка!</b>
+        Я не могу тебе писать в ЛС, напиши мне для начала.
+  top:
+    info: |
+      Топ по активности в чате <b>${chatName}</b>:
+      ${top}
+  top_banan:
+    info: |
+      Топ 🍌 в чате <b>${chatName}</b>:
+      ${top}
+    error:
+      empty: В этой группе пока никто не получал 🍌
   extras:
     list: |
       <b>extra's чата:</b>
@@ -88,12 +102,6 @@ cmd:
         <b>Ошибка!</b>
         extra c именем \#${extraName} не найдено.
         Для создания новой введите команду повторно в ответ на сообщение.
-  top_banan:
-    info: |
-      Топ 🍌 в чате <b>${chatName}</b>:
-      ${top}
-    error:
-      empty: В этой группе пока никто не получал 🍌
   reset: Настройки были сброшены
 settings:
     json:
