--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -13,13 +13,14 @@ cmd:
     Я помогаю администрировать группы.
 
     <b>Список команд:</b>
+    /ping - проверить работу бота
     /banan - выдать бан
     /kick - пнуть
     /del - удалить сообщение
-    /ping - проверить работу бота
+    /top - топ участников по активности
+    /top_banan - топ участников по времени банана
     /mystats - статистика в чате
     /extras - список extra чата
-    /top_banan - топ человек по времени банана
 
     <code>!welcome</code> - включить/отключить приветствия
     <code>!gif</code> - добавить/удалить гиф в список приветствий
