--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -29,7 +29,7 @@ cmd:
 
     <code>!json</code> - отправить настройки
 
-    <code>!reset-text</code> - сбросить все таексты приветствий
+    <code>!reset-text</code> - сбросить все тексты приветствий
     <code>!reset-gif</code> - сбросить все gif приветствий
     <code>!reset</code> - сбросить настройки группы
 
@@ -94,7 +94,7 @@ cmd:
     push: Текст успешно добавлен в список приветствий
     pull: Текст успешно удален из списка приветствий
     error: Ошибка, текст не содержит <code>%name%</code>
-    reset: Список тектов очищен
+    reset: Список текстов очищен
   extra:
     push: \#${extraName} успешно сохранено
     pull: \#${extraName} успешно удалено
