--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -29,8 +29,8 @@ cmd:
 
     <code>!json</code> - отправить настройки
 
-    <code>!reset-text</code> - сбросить все тексты приветствий
-    <code>!reset-gif</code> - сбросить все gif приветствий
+    <code>!text-reset</code> - сбросить все тексты приветствий
+    <code>!gif-reset</code> - сбросить все gif приветствий
     <code>!reset</code> - сбросить настройки группы
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
