--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -112,7 +112,7 @@ settings:
     json:
       reset: Настройки были успешно восстановлены из файла
 banan:
-  show: ${name} показал(а) 🍌
+  show: ${name} показывает 🍌
   suc:  ${name} получает 🍌\n<b>Срок:</b> ${duration}
   pick: ${name} лишается 🍌\n
   error: <b>У меня не получилось выдать 🍌</b>\n<pre>${error}</pre>
