--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -2,13 +2,16 @@ private:
   start: |
     Привіт, <b>${name}</b>!
     Я допоможу тобі адмініструвати групу.
-    Добавь меня в группу.
+    Додай мене в групу.
+
     /help - допомога
+
     <b>👨🏻‍💻 Блог розробника:</b> @LyBlog
   btn_add: Додати в групу
 cmd:
   help: |
     Я допомагаю адмініструвати групи.
+
     <b>Список команд:</b>
     /ping - провірити роботу бота
     /banan - видати бан
@@ -18,27 +21,35 @@ cmd:
     /top_banan - топ учасників за часом банана
     /mystats - статистика в чаті
     /extras - список extra чата
+
     <code>!welcome</code> - увімкнути/вимкнути привітання
     <code>!gif</code> - додати/видалити гіф в список привітань
     <code>!text</code> - додати/видалити текст в список привітань
     <code>!extra arg</code> - створити extra з назвою \#arg
+
     <code>!json</code> - відправити налаштування
-    <code>!reset-text</code> - скинути всі тексти привітань
-    <code>!reset-gif</code> - скинути всі gif привітань
+
+    <code>!text-reset</code> - скинути всі тексти привітань
+    <code>!gif-reset</code> - скинути всі gif привітань
     <code>!reset</code> - скинути налаштування групи
+
     <b>👨🏻‍💻 Блог розробника:</b> @LyBlog
     <b>GitHub:</b> github.com/LyoSU/LyAdminBot
+
     <pre>v${version}</pre>
   my_stats:
     send_pm: Статистика відправлена в ПП
     chat: |
       📊 Статистика ${name} в чаті <b>${chatName}</b>:
+
       <b>Кількість бананів:</b> ${banCount} 🍌
       <b>Загальний час бана:</b> ${banTime}
       <b>Автобан:</b> ${banAutoTime}
+
       <b>Повідомлень:</b> ${messages}
       <b>Актив:</b> ${active}%
       <b>Флуд:</b> ${flood}%
+
       <b>Вперше був помічений:</b> ${createdAt}
     error:
       blocked: |
@@ -50,7 +61,7 @@ cmd:
       ${top}
   top_banan:
     info: |
-      Топ 🍌 у чаті <b>${chatName}</b>: 
+      Топ 🍌 у чаті <b>${chatName}</b>:
       ${top}
     error:
       empty: У цій групі поки що ніхто не отримував 🍌
@@ -100,7 +111,7 @@ settings:
     json:
       reset: Налаштування були успішно відновлені з файлу
 banan:
-  show: ${name} показав(ла) 🍌
+  show: ${name} показує 🍌
   suc:  ${name} отримує 🍌\n<b>Термін:</b> ${duration}
   pick: ${name} позбавляється 🍌\n
   error: <b>У мене не виходить видати 🍌</b>\n<pre>${error}</pre>
