--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -22,6 +22,8 @@ cmd:
     /mystats - статистика в чате
     /extras - список extra чата
 
+    /lang - изменить язык
+
     <code>!welcome</code> - включить/отключить приветствия
     <code>!gif</code> - добавить/удалить гиф в список приветствий
     <code>!text</code> - добавить/удалить текст в список приветствий
