--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -22,6 +22,8 @@ cmd:
     /mystats - статистика в чаті
     /extras - список extra чата
 
+    /lang - змінити мову
+
     <code>!welcome</code> - увімкнути/вимкнути привітання
     <code>!gif</code> - додати/видалити гіф в список привітань
     <code>!text</code> - додати/видалити текст в список привітань
