--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -1,41 +1,41 @@
 private:
   start: |
     Hello, <b>${name}</b>!
-    I can help you to manage a group
+    I can help you manage a group
     Add me to the group.
 
     /help - help
 
-    <b>👨🏻‍💻 A russian blog of developer:</b> @LyBlog
+    <b>👨🏻‍💻 Developer's blog (Russian):</b> @LyBlog
   btn_add: Add to the group
 cmd:
   help: |
     I can help you to manage the group
 
     <b>The list of commands:</b>
-    /ping - to check the status of the bot
-    /banan - to ban
-    /kick - to kick
-    /del - to delete message
-    /top - to get list of participants by activity
-    /top_banan - to get list of participants by number of complaints
+    /ping - check bot status
+    /banan - ban
+    /kick - kick
+    /del - delete a message
+    /top - get a list of participants sorted by activity
+    /top_banan - get a list of participants sorted by number of complaints
     /mystats - my statistics in the chat
-    /extras - the list of extra the chat
+    /extras - list of extras in the chat
 
     /lang - change language
 
-    <code>!welcome</code> - to enable/disable the greeting
-    <code>!gif</code> - to add/remove the gif in the list of the greetings
-    <code>!text</code> - to add/remove the text in the list of the greetings
-    <code>!extra arg</code> - to create extr with title \#arg
+    <code>!welcome</code> - to enable/disable greeting
+    <code>!gif</code> - to add/remove gif in the greetings list
+    <code>!text</code> - to add/remove text in the greetings list
+    <code>!extra arg</code> - create an extra named \#arg
 
-    <code>!json</code> - to send settings
+    <code>!json</code> - send settings
 
-    <code>!text-reset</code> - to reset all texts of the greeting
-    <code>!gif-reset</code> - to reset all the gifs of the greetings
-    <code>!reset</code> - to reset settings of the group
+    <code>!text-reset</code> - to reset all greeting texts
+    <code>!gif-reset</code> - to reset all greeting gifs
+    <code>!reset</code> - to reset group settings
 
-    <b>👨🏻‍💻 The russian blog of developer:</b> @LyBlog
+    <b>👨🏻‍💻 Developer's blog (Russian):</b> @LyBlog
     <b>GitHub:</b> github.com/LyoSU/LyAdminBot
 
     <pre>v${version}</pre>
@@ -52,29 +52,29 @@ cmd:
       <b>Active:</b> ${active}%
       <b>Flood:</b> ${flood}%
 
-      <b>It was first seen:</b> ${createdAt}
+      <b>First seen date:</b> ${createdAt}
     error:
       blocked: |
         <b>Error!</b>
-        I don't send to you in a PM, please, send me.
+        I can't PM you. Please, text me first.
   top:
     info: |
-      Top chat activity <b>${chatName}</b>:
+      Most active users in <b>${chatName}</b>:
       ${top}
   top_banan:
     info: |
-      Top 🍌 in the chat<b>${chatName}</b>:
+      Top 🍌 in <b>${chatName}</b>:
       ${top}
     error:
-      empty: No one got the 🍌 in the group
+      empty: No one got 🍌 in the group
   extras:
     list: |
-      <b>extra's the chat:</b>
+      <b>Extras in the chat:</b>
       ${extras}
     error:
       not_found: |
-        This group has no extra.
-        An administration should send <code>!extra</code>
+        This group has no extras.
+        To create one, an admin must send <code>!extra</code>
   ping:
       pong: |
         🏓 Pong
@@ -91,12 +91,12 @@ cmd:
   gif:
     push: The gif is successfully added to the welcome list
     pull: The gif is successfully removed from the welcome list
-    reset: The list of gifs has been cleaned
+    reset: The list of gifs has been cleared
   text:
-    push: The text is successfully added from the list of greetings
-    pull: The text is successfully deleted from the list of greetings
+    push: The text is successfully added to the list of greetings
+    pull: The text is successfully deleted to the list of greetings
     error: Error. The text doesn't contain <code>%name%</code>
-    reset: The list of texts has been cleaned
+    reset: The list of texts has been cleared
   extra:
     push: \#${extraName} is successfully saved
     pull: \#${extraName} is successfully deleted
@@ -112,15 +112,15 @@ cmd:
   reset: Settings have been reset
 settings:
     json:
-      reset: The settings were successfully restored from the file
+      reset: Settings were successfully restored from file
 banan:
-  show: ${name} shows the 🍌
-  suc:  ${name} receives the 🍌\n<b>The term:</b> ${duration}
-  pick: ${name} deprives the 🍌\n
-  error: <b>I couldn't to give out the 🍌</b>\n<pre>${error}</pre>
+  show: ${name} shows  🍌
+  suc:  ${name} receives the 🍌\n<b>Time:</b> ${duration}
+  pick: ${name} is deprived of the 🍌\n
+  error: <b>I couldn't give the 🍌</b>\n<pre>${error}</pre>
 kick:
   suc: ${name} gets kicked
-  who: Who kick?😡
-  error: <b>I can't to kick</b>\n<pre>${error}</pre>
+  who: Whom to kick?😡
+  error: <b>I can't kick</b>\n<pre>${error}</pre>
 del:
-  error: <b>I can't to delete the message</b>\n<pre>${error}</pre>
+  error: <b>I can't delete the message</b>\n<pre>${error}</pre>
