--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -13,9 +13,9 @@ cmd:
     Я допомагаю адмініструвати групи.
 
     <b>Список команд:</b>
-    /ping - провірити роботу бота
+    /ping - перевірити роботу бота
     /banan - видати бан
-    /kick - штовхнути
+    /kick - виштовхнути
     /del - видалити повідомлення
     /top - топ учасників за активностю
     /top_banan - топ учасників за часом банана
@@ -119,7 +119,7 @@ banan:
   error: <b>У мене не виходить видати 🍌</b>\n<pre>${error}</pre>
 kick:
   suc: ${name} отримує стусана
-  who: Кого штовхнути?😡
-  error: <b>У мене не вийшло штовхнути</b>\n<pre>${error}</pre>
+  who: Кого виштовхнути?😡
+  error: <b>У мене не вийшло виштовхнув</b>\n<pre>${error}</pre>
 del:
 error: <b>У мене не вийшло видалити повідомлення</b>\n<pre>${error}</pre>
