--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -125,5 +125,15 @@ kick:
   suc: ${name} получает пинок
   who: Кого пнуть?😡
   error: <b>У меня не получилось пнуть</b>\n<pre>${error}</pre>
+sticker:
+  save:
+    suc: Стикер успешно добавлен в <a href="${link}">стикерпак группы</a>.
+    error:
+      animated: Я не могу добавть анимированный стикер.
+      telegram: <b>У меня не получилось сохранить этот стикер.</b>\n<pre>${error}</pre>
+  delete:
+    suc: Стикер успешно удален из <a href="${link}">стикерпака группы</a>.
+  btn:
+    save_sticker: Сохранить стикер
 del:
   error: <b>У меня не получилось удалить сообщение</b>\n<pre>${error}</pre>
