--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -21,6 +21,7 @@ cmd:
     /top_banan - топ участников по времени банана
     /mystats - статистика в чате
     /extras - список extra чата
+    /q - создать цитату из сообщения
 
     /lang - изменить язык
 
@@ -29,6 +30,7 @@ cmd:
     <code>!text</code> - добавить/удалить текст в список приветствий
     <code>!extra arg</code> - создать extra с названием \#arg
     <code>!extra-max 3</code> - установить максимальное количество extra в сообщении
+    <code>!s 👍</code> - сохранить стикеры/картинку в стикерпак
 
     <code>!json</code> - отправить настройки
 
