--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -30,6 +30,7 @@ cmd:
     <code>!text</code> - добавить/удалить текст в список приветствий
     <code>!extra arg</code> - создать extra с названием \#arg
     <code>!extra-max 3</code> - установить максимальное количество extra в сообщении
+    <code>!quote-color \#130f1c</code> - установить цвет фона цитат
     <code>!s 👍</code> - сохранить стикеры/картинку в стикерпак
 
     <code>!json</code> - отправить настройки
