--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -135,7 +135,7 @@ sticker:
   save:
     suc: Стикер успешно добавлен в <a href="${link}">стикерпак группы</a>.
     error:
-      animated: Я не могу добавть анимированный стикер.
+      animated: Я не могу добавить анимированный стикер.
       telegram: <b>У меня не получилось сохранить этот стикер.</b>\n<pre>${error}</pre>
   delete:
     suc: Стикер успешно удален из <a href="${link}">стикерпака группы</a>.
