--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -143,3 +143,8 @@ sticker:
       Для сохранения стикерпака в личный стикерпак перешли сообщение боту @fStikBot
 del:
   error: <b>У меня не получилось удалить сообщение</b>\n<pre>${error}</pre>
+cas:
+  banned: |
+    ${name} был заблокирован в группе, так как имеет CAS ban.
+
+    <a href="${link}">Подробнее</a>
