--- a/locales/tr.yaml
+++ b/locales/tr.yaml
@@ -24,6 +24,7 @@ cmd:
 
     <b>👨🏻‍💻 Daha fazla bilgi için buraya bakın:</b> @LyBlog
     <b>GitHub:</b> github.com/LyoSU/LyAdminBot
+    Çeviri : @By_Azade
   ping:
       pong: |
         🏓 Pong
