Added only_group to uz,ru and en language packs

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -123,3 +123,5 @@ kick:
   error: <b>I can't kick</b>\n<pre>${error}</pre>
 del:
   error: <b>I can't delete the message</b>\n<pre>${error}</pre>
+
+only_group: This command is available only in group
