--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -151,3 +151,5 @@ cas:
     ${name} был заблокирован в группе, так как имеет CAS ban.
 
     <a href="${link}">Подробнее</a>
+
+only_group: Эта команда доступна только в группах
