--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -153,3 +153,4 @@ cas:
     <a href="${link}">Подробнее</a>
 
 only_group: Эта команда доступна только в группах
+only_admin: Команду может использовать только администратор группы.
