Added only_admin and only_group

--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -122,3 +122,5 @@ kick:
   error: <b>У мене не вийшло виштовхнув</b>\n<pre>${error}</pre>
 del:
   error: <b>У мене не вийшло видалити повідомлення</b>\n<pre>${error}</pre>
+only_group: Ця команда доступна тільки в групах
+only_admin: Команду може використовувати тільки адміністратор групи.
