--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -28,6 +28,8 @@ cmd:
     <code>!gif</code> - додати/видалити гіф в список привітань
     <code>!text</code> - додати/видалити текст в список привітань
     <code>!extra arg</code> - створити extra з назвою \#arg
+    <code>!extra-max 3</code> - установити максимальну кількість extra в повідомленні
+    <code>!s 👍</code> - зберегти стікери/картинку в стікерпак
 
     <code>!json</code> - відправити налаштування
 
@@ -98,6 +100,7 @@ cmd:
   extra:
     push: \#${extraName} успішно збережено
     pull: \#${extraName} успішно видалено
+    max: Максимальну кількість extra в повідомленні установлено на <b>${maxExtra}</b>
     error:
       not_found: |
         <b>Помилка!</b>
@@ -107,6 +110,14 @@ cmd:
     member: |
       <a href="tg://user?id=${telegram_id}">${telegram_id}</a>
       ${banTime} | a: ${active} | f: ${flood}
+  quote: |
+    Для створення цитат використовуйте бота @QuotLyBot
+  cas:
+    disable: CAS Ban вимкнено
+    enable: CAS Ban увімкнено
+  banChannel:
+    disable: Ban Channel вимкнено
+    enable: Ban Channel увімкнено
   reset: Налаштування були скинуті
 settings:
     json:
@@ -120,7 +131,28 @@ kick:
   suc: ${name} отримує стусана
   who: Кого виштовхнути?😡
   error: <b>У мене не вийшло виштовхнув</b>\n<pre>${error}</pre>
+sticker:
+  save:
+    suc: Стікер успішно доданий в <a href="${link}">стікерпак групи</a>.
+    error:
+      animated: Я не можу додати анімований стікер.
+      telegram: <b>Мені не вдалося зберегти цей стікер.</b>\n<pre>${error}</pre>
+  delete:
+    suc: Стікер успішно видалений із <a href="${link}">стікерпаку групи</a>.
+    error:
+      telegram: <b>Мені не вдалося видалити цей стікер.</b>\n<pre>${error}</pre>
+  empty_forward: |
+    Команду треба писати у відповідь на повідомлення зі стікером, фото або файлом фото.
+  only_admin: |
+      Команду може використовувати тільки адміністратор групи.
+      Для збереження стікерпаку в особистий стікерпак перешли повідомлення боту @fStikBot
 del:
   error: <b>У мене не вийшло видалити повідомлення</b>\n<pre>${error}</pre>
+cas:
+  banned: |
+    ${name} був заблокований в групі, тому що має CAS ban.
+
+    <a href="${link}">Детальніше</a>
+
 only_group: Ця команда доступна тільки в групах
 only_admin: Команду може використовувати тільки адміністратор групи.
