--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -126,11 +126,11 @@ banan:
   show: ${name} показує 🍌
   suc:  ${name} отримує 🍌\n<b>Термін:</b> ${duration}
   pick: ${name} позбавляється 🍌\n
-  error: <b>У мене не виходить видати 🍌</b>\n<pre>${error}</pre>
+  error: <b>Мені не вдалося видати 🍌</b>\n<pre>${error}</pre>
 kick:
   suc: ${name} отримує стусана
   who: Кого виштовхнути?😡
-  error: <b>У мене не вийшло виштовхнув</b>\n<pre>${error}</pre>
+  error: <b>Мені не вдалося виштовхнути</b>\n<pre>${error}</pre>
 sticker:
   save:
     suc: Стікер успішно доданий в <a href="${link}">стікерпак групи</a>.
@@ -147,7 +147,7 @@ sticker:
       Команду може використовувати тільки адміністратор групи.
       Для збереження стікерпаку в особистий стікерпак перешли повідомлення боту @fStikBot
 del:
-  error: <b>У мене не вийшло видалити повідомлення</b>\n<pre>${error}</pre>
+  error: <b>Мені не вдалося видалити повідомлення</b>\n<pre>${error}</pre>
 cas:
   banned: |
     ${name} був заблокований в групі, тому що має CAS ban.
