Add OpenAI spam check middleware and integrate OpenAI API for message moderation
- Updated package.json to include OpenAI SDK
- Implemented openai-spam-check middleware to analyze messages for spam and harmful content
- Integrated OpenAI chat completion to determine if messages are spam
- Added logic to ban users and delete messages flagged as spam in group chats

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -155,5 +155,11 @@ cas:
 
     <a href="${link}">More details</a>
 
+spam:
+  banned: |
+    ${name} was permanently banned from the group.
+    Reason: ${reason}
+
 only_group: This command is available only in group
 only_admin: This command can only be used by a group administrator.
+
